<resources>
    <string name="app_name">ConsumerVeMovie</string>
    <string name="movies">Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="tv_shows">TV Shows</string>
    <string name="premiere_date">Premiere Date</string>
    <string name="release_on">Release On</string>
    <string name="overview">Overview</string>
    <string name="premiere_on">Premiere On</string>
</resources>
