<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp">

    <View
        android:id="@+id/v_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/list_layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/poster"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/v_bg"
        app:layout_constraintStart_toStartOf="@+id/v_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/v_bg"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="@+id/v_bg" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/rating"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_premiere_date" />

    <TextView
        android:id="@+id/tv_premiere_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/premiere_date"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <RatingBar
        android:id="@+id/rb_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
        app:layout_constraintStart_toEndOf="@+id/tv_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_rating"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>